# claudeclaw

./: .gitignore  pyproject.toml
claudeclaw/: cli.py
claudeclaw/agents/: registry.py
claudeclaw/auth/: keyring.py  oauth.py
claudeclaw/channels/: base.py  channel_manager.py  cli_adapter.py  manager.py  slack_adapter.py  telegram_adapter.py  web_adapter.py  webhook_server.py  whatsapp_adapter.py
claudeclaw/config/: settings.py
claudeclaw/core/: conversation.py  event.py  orchestrator.py  router.py
claudeclaw/mcps/: config.py
claudeclaw/plugins/: manager.py
claudeclaw/scheduling/: manager.py
tests/: conftest.py  test_agent_creator_integration.py  test_channel_cli.py  test_channel_cli_plan7.py  test_channel_manager.py  test_channel_manager_plan7.py  test_cli.py  test_cli_adapter.py  test_config.py  test_conversation.py  test_credential_injection.py  test_dispatch.py  test_dispatch_openshell.py  test_event_channel_adapter.py  test_integration_plugin_mcps.py  test_integration_shell_policy.py  test_integration_telegram_pop.py  test_keyring.py  test_keyring_salt.py  test_mcp_cli.py  test_mcp_config.py  test_mcp_dispatch.py  test_oauth.py  test_oauth_refresh.py  test_openshell.py  test_orchestrator.py  test_orchestrator_conversation.py  test_plugin_cli.py  test_plugin_manager.py  test_registry.py  test_registry_native.py  test_router.py  test_router_meta_skills.py  test_router_native_intents.py  test_schedule_cli.py  test_schedule_manager.py  test_scheduling_integration.py  test_signature.py  test_skill_generator.py  test_skill_loader.py  (+6 more)
(+24 files in other folders)
