[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeclaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "python-frontmatter>=1.1",
    "pydantic>=2.0",
    "keyring>=25.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
claudeclaw = "claudeclaw.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-asyncio", "pytest-mock"]
