[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeclaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "python-frontmatter>=1.1",
    "pydantic>=2.0",
    "keyring>=25.0",
    "cryptography>=42.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "twilio>=9.0",
    "slack-bolt>=1.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]

[project.scripts]
claudeclaw = "claudeclaw.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-asyncio", "pytest-mock"]
